add story cover and update display style

--- a/Read_to_Succeed_Band_03(Yellow)/01.Around-the-World.md
+++ b/Read_to_Succeed_Band_03(Yellow)/01.Around-the-World.md
@@ -1,8 +1,8 @@
-## B03 Around the World
+## Band03
 
-Written by James Carter, Illustrated by Anne Wilson
+### 01. Around the World
 
-
+![image](./01.Around-the-World.jpg)
 
 We went by train, by boat, by plane, around the **world** and back again.
 
@@ -18,6 +18,6 @@ We wen to ... **China**! Then where did we go?
 
 
 
-### New Words
+##### New Words
 
-> Africa, India, train, boat, plane, world, China, snow, home, sun
+Africa, India, train, boat, plane, world, China, snow, home, sun
