update "New Words" style

--- a/Read_to_Succeed_Band_03(Yellow)/01.Around-the-World.md
+++ b/Read_to_Succeed_Band_03(Yellow)/01.Around-the-World.md
@@ -18,6 +18,6 @@ We wen to ... **China**! Then where did we go?
 
 
 
-##### New Words
+#### New Words
 
 Africa, India, train, boat, plane, world, China, snow, home, sun
