add a punch card template

--- a/Read_to_Succeed_Band_03(Yellow)/01.Around-the-World.md
+++ b/Read_to_Succeed_Band_03(Yellow)/01.Around-the-World.md
@@ -1,8 +1,6 @@
-## Band 03 Yellow
-
 ### 01. Around the World
 
-![image](./01.Around-the-World.jpg)
+![logo](./01.Around-the-World.jpg)
 
 We went by train, by boat, by plane, around the **world** and back again.
 
@@ -16,8 +14,6 @@ We wen to ... **China**! Then where did we go?
 
 **Home** sweet **home**!
 
-
-
 #### New Words
 
-Africa, India, train, boat, plane, world, China, snow, home, sun
+> Africa, India, train, boat, plane, world, China, snow, home, sun
