--- a/Read_to_Succeed_Band_04A(Blue)/09.Mojo-and-Weeza-and-the-Funny-Thing.md
+++ b/Read_to_Succeed_Band_04A(Blue)/09.Mojo-and-Weeza-and-the-Funny-Thing.md
@@ -1,6 +1,6 @@
-### 09. Mojo and Weeza and The Funny Thing
+### 09. Mojo and Weeza and the Funny Thing
 
-![logo](./09.Mojo-and-Weeza-and-The-Funny-Thing.jpg)
+![logo](./09.Mojo-and-Weeza-and-the-Funny-Thing.jpg)
 
 Mojo and Weeza found a **funny** thing.
 
